# mipsmatch

./: .gitignore  Cargo.toml  Makefile  README.md
.config/: dict.txt  spellcheck.toml
.github/workflows/: format.yaml  test.yaml
src/: arch.rs  cli.rs  elf.rs  evaluate.rs  fingerprint.rs  lib.rs  main.rs  map.rs  objmatch.rs  rk.rs  scan.rs
src/arch/: mips.rs  n64.rs
src/objmatch/: evaluate.rs  map.rs  scan.rs
tests/: elf_test.rs  fingerprint_tests.rs  scan_tests.rs
tests/data/: tt_004.elf  tt_004.ld  tt_004.map
