[package]
name = "mipsmatch"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
elf = "0.7.4"
itertools = "0.14.0"
mapfile_parser = "2.7.3"
rabbitizer = "1.13.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "3.12.0"
serde-hex = "0.1.0"
llvm-tools = "0.1.1"

[package.metadata.deb]
maintainer = "Jonathan Hohle <jon@ttkb.co>"
copyright = "2025, TTKB, LLC."
license-file = ["LICENSE.TXT", "2"]
extended-description = """\
A utility for searching MIPS binaries for known functions, data, and segments.
"""
depends = "$auto"
section = "development"
priority = "optional"
assets = [
    # target/release path is special, and gets replaced by cargo-deb with the actual target dir path.
    ["target/release/mipsmatch", "usr/bin/", "755"],
    # both array and object syntaxes are equivalent:
    { source = "README.md", dest = "usr/share/doc/mipsmatch/README", mode = "644"},
]
